@@ -42,6 +42,8 @@ unbound
 .Nm unbound
 .Op Fl h
 .Op Fl p Ar port
+.Op Fl f Ar ip
+.Op Fl z Ar port
 .Op Fl v
 
 .Sh DESCRIPTION
@@ -57,6 +59,12 @@ Show the version and commandline option help.
 
 .It Fl p Ar port
 Start listening on the given port. Default is port 53(DNS).
+
+.It Fl f Ar ip
+Set forwarder address. DNS queries will be forwarded to this server.
+
+.It Fl z Ar ip
+Set forwarder port. DNS queries will be forwarded to this port.
 
 .It Fl v
 Increase verbosity. If given multiple times, more information is logged.
